[gd_scene format=3 uid="uid://cmf8lktsaniii"]

[ext_resource type="Script" uid="uid://c1pc6icjxhn58" path="res://view/scenes/GuildScene/guild_ui.gd" id="1_dg5a0"]
[ext_resource type="FontFile" uid="uid://36uqtsfpuwos" path="res://view/assets/fontes/KCObraLetraRegular.ttf" id="2_53hpq"]
[ext_resource type="Theme" uid="uid://bbr7x4ga0rwkf" path="res://view/ui/Themes/font_h4.tres" id="2_elrt8"]
[ext_resource type="StyleBox" uid="uid://cougiaikoix52" path="res://view/ui/Themes/npc_button_pressed.tres" id="3_5k0mm"]
[ext_resource type="StyleBox" uid="uid://cy2fjb7rfkc6c" path="res://view/ui/Themes/npc_button_hover.tres" id="4_pugh1"]

[node name="Control" type="Control" unique_id=1013367527]
z_index = 100
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dg5a0")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="." unique_id=1260426192]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="." unique_id=895728455]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_left = 20.0
offset_top = 10.0
offset_right = -20.0

[node name="BoxContainer" type="BoxContainer" parent="HBoxContainer" unique_id=1413778202]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/BoxContainer" unique_id=1769197057]
layout_mode = 2

[node name="HpLabel" type="Label" parent="HBoxContainer/BoxContainer/HBoxContainer" unique_id=1751944799]
layout_mode = 2
theme = ExtResource("2_elrt8")
theme_override_fonts/font = ExtResource("2_53hpq")
text = "Vida:"

[node name="HpValueLabel" type="Label" parent="HBoxContainer/BoxContainer/HBoxContainer" unique_id=1464591210]
layout_mode = 2
theme = ExtResource("2_elrt8")
text = "00"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer" unique_id=680553539]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer" unique_id=880884202]
layout_mode = 2

[node name="WoodLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer" unique_id=56834427]
layout_mode = 2
theme = ExtResource("2_elrt8")
text = "Madeira:"

[node name="WoodValueLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer" unique_id=1831251862]
layout_mode = 2
theme = ExtResource("2_elrt8")
text = "000"

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer" unique_id=877975187]
layout_mode = 2

[node name="StoneLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2" unique_id=1172916977]
layout_mode = 2
theme = ExtResource("2_elrt8")
text = "Pedra:"

[node name="StoneValueLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2" unique_id=487030482]
layout_mode = 2
theme = ExtResource("2_elrt8")
text = "000"

[node name="BoxContainer" type="BoxContainer" parent="." unique_id=954750494]
custom_minimum_size = Vector2(0, 60)
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="StartRun" type="Button" parent="BoxContainer" unique_id=764324240]
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
size_flags_horizontal = 6
theme = ExtResource("2_elrt8")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = ExtResource("3_5k0mm")
theme_override_styles/pressed = ExtResource("3_5k0mm")
theme_override_styles/hover = ExtResource("4_pugh1")
keep_pressed_outside = true
text = "Come√ßar partida"

[connection signal="pressed" from="BoxContainer/StartRun" to="." method="_on_start_run_pressed"]
